--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UbitaScript</title>
     <link rel="stylesheet" href="bootstrap.css" />
+    <script src="copy.js"></script>
   </head>
   <body style="text-align: center">
     <div class="container">
@@ -25,9 +26,9 @@
             <div
               class="alert alert-dismissible alert-primary"
               style="text-align: center">
-              <strong>z6fR54f&7$Sx</strong>
+              <label id="keyid" style="text-align: center">z6fR54f&7$Sx</label>
             </div>
-            <button type="submit" class="btn btn-primary">COPY KEY</button>
+            <button type="submit" onclick="copyLabelText()" class="btn btn-primary">COPY KEY</button>
         </section>
         <section class="col-md-4">
 
@@ -36,3 +37,4 @@
     </div>
   </body>
 </html>
+
